error2.log
    Checking fusion_lang v0.1.0 (C:\Projects\Fusion - Programming Language)
error[E0277]: the trait bound `(): From<ParseIntError>` is not satisfied
  --> src\lexer.rs:5:10
   |
 5 | #[derive(Logos, Debug, PartialEq, Clone)]
   |          ^^^^^ the trait `From<ParseIntError>` is not implemented for `()`
...
34 |     #[regex("[0-9]+", |lex| lex.slice().parse())]
   |                             ------------------- return type was inferred to be `Result<_, _>` here
   |
   = help: the following other types implement trait `From<T>`:
             `(T, T)` implements `From<[T; 2]>`
             `(T, T, T)` implements `From<[T; 3]>`
             `(T, T, T, T)` implements `From<[T; 4]>`
             `(T, T, T, T, T)` implements `From<[T; 5]>`
             `(T, T, T, T, T, T)` implements `From<[T; 6]>`
             `(T, T, T, T, T, T, T)` implements `From<[T; 7]>`
             `(T, T, T, T, T, T, T, T)` implements `From<[T; 8]>`
             `(T, T, T, T, T, T, T, T, T)` implements `From<[T; 9]>`
           and 4 others
   = note: required for `ParseIntError` to implement `Into<()>`
   = note: required for `Result<i64, ParseIntError>` to implement `CallbackResult<'s, i64, Token>`

warning: unused variable: `name`
  --> src\semantic_analyzer\mod.rs:74:17
   |
74 |                 name,
   |                 ^^^^ help: try ignoring the field: `name: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0277`.
warning: `fusion_lang` (bin "fusion_lang") generated 1 warning
error: could not compile `fusion_lang` (bin "fusion_lang") due to 1 previous error; 1 warning emitted
